--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -1,6 +1,6 @@
 
         <div class="divBody">
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/D40yc7B/logo-labelle-2.jpg" alt="logo-labelle-2" border="0"></a>
+            <a href="https://imgbb.com/"><img class="imgLogo" src="https://i.ibb.co/D40yc7B/logo-labelle-2.jpg" alt="logo-labelle-2" border="0"></a>
             <form class="cadProdutos" method="post" action="/cadastrar">
                 <div class="campoInput">
                     <p>Nome:</p>
