--- a/views/editar.handlebars
+++ b/views/editar.handlebars
@@ -4,7 +4,7 @@
        
         <div class="divBody">
             
-            <img class="imgLogo" src="../imagem/logo labelle 2.jpg" alt="">
+            <a href="https://imgbb.com/"><img class="imgLogo" src="https://i.ibb.co/D40yc7B/logo-labelle-2.jpg" alt="logo-labelle-2" border="0"></a>
             <form class="cadProdutos" method="post" action="/editar">
                 <div class="campoInput">
                      <input type="hidden" name="id" value="{{id}}">
